<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_title"
            android:textColor="@color/colorWhite"
            android:textSize="15sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_subtitle"
            android:textColor="@color/colorWhite"
            android:textSize="12sp" />

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:id="@+id/lbWeight"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/lb_weight"
                    android:textColor="@color/colorWhite"
                    android:textSize="13sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/edWeight"
                        android:layout_width="0dp"
                        android:layout_weight=".95"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:layout_below="@id/lbWeight"
                        android:layout_toLeftOf="@id/lbWeightUnit"
                        android:layout_toStartOf="@id/lbWeightUnit"
                        android:background="@drawable/ed_bordered"
                        android:inputType="numberDecimal" />

                    <TextView
                        android:id="@+id/lbWeightUnit"
                        android:layout_width="45dp"
                        android:layout_weight=".05"
                        android:layout_height="match_parent"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:layout_below="@id/lbWeight"
                        android:background="@drawable/lb_bordered"
                        android:gravity="center"
                        android:text="@string/lb_weight_unit"
                        android:textColor="@color/colorPrimaryDark" />

                </LinearLayout>

                <TextView
                    android:id="@+id/lbHeight"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/lb_height"
                    android:textColor="@color/colorWhite"
                    android:layout_marginTop="20dp"
                    android:textSize="13sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/edHeight"
                        android:layout_width="0dp"
                        android:layout_weight=".95"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:layout_below="@id/lbHeight"
                        android:layout_toLeftOf="@id/lbHeightUnit"
                        android:layout_toStartOf="@id/lbHeightUnit"
                        android:background="@drawable/ed_bordered"
                        android:inputType="numberDecimal" />

                    <TextView
                        android:id="@+id/lbHeightUnit"
                        android:layout_width="45dp"
                        android:layout_weight=".05"
                        android:layout_height="match_parent"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:layout_below="@id/lbHeight"
                        android:text="@string/lb_height_unit"
                        android:background="@drawable/lb_bordered"
                        android:gravity="center"
                        android:textColor="@color/colorPrimaryDark" />

                </LinearLayout>

                <Button
                    android:id="@+id/btCalc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:background="@color/colorAccent"
                    android:textColor="@color/colorWhite"
                    android:text="@string/btn_calc_label" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/layResult"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:text="@string/lb_result"
                    android:textAlignment="center" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp">

                    <TextView
                        android:id="@+id/lbResultWeight"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.50"
                        android:text="@string/lb_result_weight"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/lbResultImc"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.50"
                        android:text="@string/lb_result_imc"
                        android:textSize="20sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp">

                    <TextView
                        android:id="@+id/lbResultAbstract"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/lb_result_abstract"
                        android:textSize="20sp" />
                </LinearLayout>

                <Button
                    android:id="@+id/btClear"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:background="@color/colorPrimaryDark"
                    android:textColor="@color/colorWhite"
                    android:text="@string/btn_clear_label" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>